manifests/bootstrap/jenkins/jenkins-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
    - name: traefik-gateway
      namespace: traefik
      sectionName: jenkins
  hostnames:
    - "jenkins.iemafzalhassan.tech"
  rules:
    - backendRefs:
        - name: jenkins
          port: 8080
